# number2text

./: .coafile  .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  tox.ini
.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
docs/source/: conf.py  index.rst  installation.rst
number2text/: conversion.py  main.py  utils.py
number2text/cli/: cli.py
number2text/tests/: test_conversion.py  test_number2text.py  test_utils.py
