[metadata]
name = number2text
summary = Convert a number to its text representation.
description-file =
    README.rst
author = rgreinho
author-email = remy.greinhofer@gmail.com
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[entry_points]
console_scripts =
    number2text = number2text.cli.cli:cli

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[wheel]
universal = 0
